# uav-swarm-simulator

./: .dockerignore  CMakeLists.txt  DOCKER.md  Dockerfile  README.md  demo.txt  docker-compose.yml  imgui.ini  large_test_metrics.json  large_test_trace.csv  metrics.json  network_test_metrics.json  network_test_trace.csv  test_map.txt  test_metrics.json  test_trace.csv  trace.csv  visualize.py
.cache/clangd/index/: gui_main.cpp.DA073F00810B276D.idx  imap_loader.hpp.DC9967363165CE82.idx  imgui_renderer.hpp.4B17BBA1C8DD6DB4.idx  inet.hpp.79371F041984CAFA.idx  main.cpp.02B66676EA449527.idx  map_loader_file.cpp.B21A345B0D9F571A.idx  map_loader_file.hpp.F128713A9A1BF09E.idx  metrics.cpp.0A8F89EB452CA3A3.idx  metrics.hpp.C0B6C07B338A8FD0.idx  metrics_writer.cpp.ECB2926B333EBBA3.idx  net_sim_asio.cpp.FA1BCE569DF5BE31.idx  net_sim_asio.hpp.321919437CB00C36.idx  planner.cpp.A39B02FFE1138E83.idx  planner.hpp.E6712EC74729C60E.idx  renderer.cpp.23F0E2CF4C25A7A0.idx  renderer.hpp.6F2F49CFAADF8B34.idx  simulation.cpp.395326AAF9C72B8D.idx  simulation.hpp.C39B374F2FF460A5.idx  test_integration.cpp.5ED8C0121ADB17F5.idx  test_main.cpp.8403F95F2E55FA81.idx  test_map_loader.cpp.444F7DCD252BB319.idx  test_metrics.cpp.E657BDE4ACF86C1A.idx  test_net_sim.cpp.46A4706A63BEB5DA.idx  test_planner.cpp.89CCF08E61349ACF.idx  test_properties.cpp.DE7FE5D9BC218D65.idx  test_reservations.cpp.CDEB0D8F3D7A9794.idx  test_types.cpp.2B4ABFE5698AAE6D.idx  test_world.cpp.54F3B28E455D2D84.idx  types.cpp.72D8F3D06E99F016.idx  types.hpp.B5648F408E4177A3.idx  world.cpp.E589E7E6DEA80483.idx  world.hpp.9DF213EBB6EC809E.idx
include/swarmgrid/: simulation.hpp
include/swarmgrid/adapters/: imgui_renderer.hpp  map_loader_file.hpp  net_sim_asio.hpp
include/swarmgrid/core/: metrics.hpp  planner.hpp  types.hpp  world.hpp
include/swarmgrid/ports/: imap_loader.hpp  inet.hpp  renderer.hpp
maps/: colossal.txt  complex.txt  corridor.txt  demo.txt  large.txt  massive.txt  small.txt
src/: gui_main.cpp  main.cpp  simulation.cpp
src/adapters/: map_loader_file.cpp  metrics_writer.cpp  net_sim_asio.cpp
src/core/: metrics.cpp  planner.cpp  types.cpp  world.cpp
src/gui/: renderer.cpp
tests/: test_integration.cpp  test_main.cpp  test_map_loader.cpp  test_metrics.cpp  test_net_sim.cpp  test_planner.cpp  test_properties.cpp  test_reservations.cpp  test_types.cpp  test_world.cpp
